css/calendar_input_style.css
/* ... */
.custom-checkbox .custom-control-input:checked ~ .custom-control-indicator {
	background-color: #818181;
	background-image: none;
	box-shadow: none !important; 
}
.custom-checkbox .custom-control-input:checked ~ .custom-control-indicator:after {
	background-color: #84c7c1;
	left: 15px; 
}
.custom-checkbox .custom-control-input:focus ~ .custom-control-indicator {
	box-shadow: none !important; 
}

/* ------------------ Event forms ----------------- */


.event-basic-wrapper{
	margin-top: 40px;
    margin-bottom: 40px;
}

.clickable_background{
	position: fixed;
	top: 0px;
	bottom: 0px;
	background-color:rgba(75, 75, 75, 0.75);
	width: 100%;
	height:100%;
	z-index:1000;
	overflow-y:scroll;
}

.event-wrapper {
	position:relative;
	max-width: 40vw;
	min-width: 650px;
	padding: 15px 35px 45px;
	margin: 0 auto;
	background-color: #fff;
	border: 1px solid rgba(0, 0, 0, 0.1);
	border-radius:7px;
}

.close-ui-btn-bg{
	position:absolute;
	right: -20px;
	top: -16.5px;
	width:60px;
	height:60px;
	border-radius: 30px;
	background-color: white;
}

.close_ui_btn{
	position:absolute;
	right: -12px;
	top: -12px;
	font-size: 50px;
	color:#E53935;
	cursor: pointer;
}

.close_ui_btn:hover{
	color:#B71C1C;
}

.event-form-heading{
	margin-top:10px;
}

.event_desc.editable{
	height:100px;
}

.event_desc > :last-child { margin-bottom: 0 !important; margin-right: 0 !important; }

ol{
	padding-inline-start:0px;
	margin-block-end:0px;
}

li{
	list-style-type: none;
}


ol.example li.placeholder {
	position: relative;
}

ol.example li.placeholder:before {
	position: absolute;
}

.group{
	display: -moz-inline-flex;
	display: -moz-inline-flexbox;
	display: inline-flex;
	justify-content: center;
	align-self: center;
	flex-wrap:wrap;
	margin-bottom:5px;
	width:100%;
}

.group .handle{
	-webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
-moz-box-flex: 1;         /* OLD - Firefox 19- */

-webkit-flex: 1;          /* Chrome */
-ms-flex: 1;              /* IE 10 */
flex: 1;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
	flex-grow:0;
}

.group > .group_list{
	-webkit-box-flex: 1;      /* OLD - iOS 6-, Safari 3.1-6 */
-moz-box-flex: 1;         /* OLD - Firefox 19- */

-webkit-flex: 1;          /* Chrome */
-ms-flex: 1;              /* IE 10 */
flex: 1;                  /* NEW, Spec - Opera 12.1, Firefox 20+ */
	flex-grow:1;
	order:2;
	min-height:34px;
	border:1px solid black;
	border-radius: 5px;
	padding:5px;
	padding-bottom:0px;
	margin-bottom:5px;
}

.group_type.not ~ .group_list{
	background-color:rgb(200,150,150);
}

.group_type{
	width:100%;
	height:30px;
	padding-left:34px;
	font-weight: 800;
	display: -webkit-box; 
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex; 
	display: flex;
	margin:5px 0;
}

.group_type div{
	padding:5px;
	display: -moz-inline-flex;
	display: -moz-inline-flexbox;
	display: inline-flex;
	margin-right:15px;
}

.group_type label{
	cursor: pointer;
	border-radius: 5px;
	margin-right: 5px;
}

.group_type div input[type='radio']{
	margin-right:5px;
}

.group_type div input[type='number']{
	width:5em;
	height:100% !important;
}


.group_type[type='normal'] ~ .group_list{
	background-color:rgb(200,200,200);
}
.group_type[type='normal'] div.normal{
	background-color:rgb(200,200,200);
	border:1px solid black;
	border-radius: 10px;
	margin:-1px 14px -1px -1px;
}

.group_type[type='not'] ~ .group_list{
	background-color:rgb(200,150,150);
}
.group_type[type='not'] div.not{
	background-color:rgb(200,150,150);
	border:1px solid black;
	border-radius: 10px;
	margin:-1px 14px -1px -1px;
}

.group_type[type='num']  ~ .group_list{
	background-color:rgb(150,150,220);
}
.group_type[type='num'] div.num{
	background-color:rgb(150,150,220);
	border:1px solid black;
	border-radius: 10px;
	margin:-1px 14px -1px -1px;
}

.group .condition_operator{
	flex:0 1 100%;
	order:3;
}

.condition{
	margin-bottom:5px;
}

.condition:last-child{
	margin-bottom:0px;
}

.condition_container{
	display: -webkit-box; 
	display: -moz-box;
	display: -ms-flexbox;
	display: -webkit-flex; 
	display: flex;
	border:1px solid black;
	border-radius: 5px;
	padding:5px;
	margin-bottom:5px;
	min-height: 34px;
	background-color:white;
}

.placeholder{
	min-height:34px;
	padding:5px;
	margin-bottom:5px;
	background-color: rgba(0,0,0,0.25);
}

.dragged {
	position: absolute;
	opacity: 0.5;
	z-index: 2000;
}

.dragged > select{
	display:none;
}

#event_conditions_container .handle{
	padding:6px;
	order:1;
}

.condition_container .condition_type{
	order:3;
	width:auto;
}

.condition_container .moon_select{
	order:2;
	display:none;
}

.condition_container.Moons .condition_type{
	width:13.5em;
}

.condition_container.Moons .moon_select{
	width:auto;
	display:block;
}

.condition_container .input_container{
	display: -moz-inline-flex;
	display: -moz-inline-flexbox;
	display: inline-flex;
	order:5;
	flex-wrap: wrap;
	flex-grow:1;
}

.condition_container .input_container input{
	order:1;
	width:100%;
}

.condition_container .input_container .nth, .condition_container .input_container .offset{
	order:1;
	width:50%;
}


.trumbowyg-box{
	margin:0;
}

/* ------------------ Condition styles ----------------- */


.condition_container.Year{
	background-color:#FFEBEE;
}

.condition_container.Month{
	background-color:#E0F2F1;
}

.condition_container.Day{
	background-color:#F1F8E9;
}

.condition_container.Epoch{
	background-color:#ECEFF1;
}

.condition_container.Weekday{
	background-color:#FFFDE7;
}

.condition_container.Week{
	background-color:#FFF3E0;
}

.condition_container.Moons{
	background-color:#E3F2FD;
}

.condition_container.Cycle{
	background-color:#FAFAFA;
}






#errors_background, #warnings_background{
	width:100%;
	height:100%;
	background-color: rgba(0, 0, 0, 0.5);
	z-index: 200;
	position:fixed;
	display: flex;
	align-items: center;
	display:none;
}

#warnings_content{
	margin-bottom:10px;
}
/* ... */

